src/deploy/deploy.podAntiAffinity.yaml
apiVersion: v1
kind: Pod
metadata:
  name: web-affinity
spec:
  affinity:
    podAntiAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
      - labelSelector:
          matchExpressions:
          - key: app
            operator: In
            values:
            - "web"
        topologyKey: kubernetes.io/hostname
  containers:
  - name: mykubernetesapp-affinity
    image: gigaxregistrytest.azurecr.io/mykubernetesapp:latest
