src/deploy/deploy.probes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mykubernetesapp-demo
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: mykubernetesapp
          image: gigaxregistrytest.azurecr.io/mykubernetesapp:latest
          imagePullPolicy: IfNotPresent
          startupProbe:
            httpGet:
                path: /health/startup
                port: 80
            failureThreshold: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
                path: /healthz
                port: 80
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
                path: /ready
                port: 80
            successThreshold: 3
      imagePullSecrets:
        - name: acr-secret
---
apiVersion: v1
kind: Service
metadata:
  name: mykubernetesapp-entrypoint
  namespace: default
spec:
  type: LoadBalancer
  selector:
    app: web
  ports:
  - port: 80
    targetPort: 80
